# docs/swagger.json
@@ -65,6 +65,12 @@
                         "schema": {
                             "$ref": "#/definitions/http.CreateTaskRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "the id of the caller",
+                        "name": "CallerId",
+                        "in": "header"
                     }
                 ],
                 "responses": {
